# tanos

./: .gitignore  LICENSE  README.md
tanos/: Cargo.toml  INSTALL_AND_RUN.sh  INSTALL_COMMANDS.txt  Makefile  QUICK_START.md  README.md  rust-toolchain.toml  simulate_boot.sh
tanos/.cargo/: config.toml
tanos/build_system/: Cargo.toml  kernel.ld.template  userspace.ld.template
tanos/build_system/src/: lib.rs  linker_script.rs  qemu_runner.rs
tanos/core/kernel/: Cargo.toml  build.rs
tanos/core/kernel/asm/: entry.S
tanos/core/kernel/src/: driver.rs  gdt.rs  main.rs  syscall.rs
tanos/core/kernel/src/boot/: mod.rs  multiboot.rs  uefi.rs
tanos/core/kernel/src/capability/: mod.rs
tanos/core/kernel/src/debug/: backtrace.rs  log.rs  mod.rs  serial.rs
tanos/core/kernel/src/interrupt/: handlers.rs  idt.rs  irq.rs  mod.rs  timer.rs
tanos/core/kernel/src/ipc/: endpoint.rs  message.rs  mod.rs  syscalls.rs
tanos/core/kernel/src/memory/: frame.rs  heap.rs  mod.rs  page.rs  vmm.rs
tanos/core/kernel/src/process/: context.rs  mod.rs  process.rs  scheduler.rs
tanos/core/syscall_abi/: Cargo.toml
tanos/core/syscall_abi/src/: lib.rs  numbers.rs  x86_64.rs
tanos/core/types/: Cargo.toml
tanos/core/types/src/: capability.rs  error.rs  ipc.rs  lib.rs  memory.rs  process.rs
tanos/docs/: CONSOLE_DRIVER_DEMO.md  OSDEV_POST.md
tanos/tests/: Cargo.toml
tanos/tests/integration/: basic_system_test.rs
tanos/tests/src/: common.rs  lib.rs
tanos/tests/unit/: syscall_tests.rs
tanos/userspace/: userspace.ld
tanos/userspace/apps/memory_test/: Cargo.toml
tanos/userspace/apps/memory_test/src/: main.rs
tanos/userspace/apps/shell/: Cargo.toml
tanos/userspace/apps/shell/src/: main.rs
tanos/userspace/drivers/keyboard/: Cargo.toml
tanos/userspace/drivers/keyboard/src/: main.rs
tanos/userspace/drivers/network/: Cargo.toml
tanos/userspace/drivers/network/src/: main.rs
tanos/userspace/drivers/storage/: Cargo.toml
tanos/userspace/drivers/storage/src/: main.rs
tanos/userspace/drivers/vga/: Cargo.toml
tanos/userspace/drivers/vga/src/: main.rs
tanos/userspace/init/: Cargo.toml  build.rs
tanos/userspace/init/src/: main.rs
tanos/userspace/libmicro/: Cargo.toml
tanos/userspace/libmicro/src/: error.rs  ipc.rs  lib.rs  memory.rs  process.rs  protocols.rs  sync.rs  syscall.rs
tanos/userspace/servers/memory_server/: Cargo.toml
tanos/userspace/servers/memory_server/src/: address_space.rs  heap_allocator.rs  lib_extensions.rs  main.rs  protocol.rs  shared_memory.rs
tanos/userspace/servers/network_stack/: Cargo.toml
tanos/userspace/servers/network_stack/src/: ethernet.rs  ip.rs  lib_extensions.rs  main.rs  packet_buffer.rs  protocol.rs  socket.rs  tcp.rs  udp.rs
tanos/userspace/servers/network_stack/src/src/: protocol.rs
tanos/userspace/servers/process_server/: Cargo.toml
tanos/userspace/servers/process_server/src/: elf_loader.rs  lib_extensions.rs  main.rs  process_table.rs  protocol.rs
tanos/userspace/servers/vfs/: Cargo.toml
tanos/userspace/servers/vfs/src/: file_table.rs  filesystem.rs  initrd.rs  lib_extensions.rs  main.rs  path.rs  protocol.rs
