[package]
name = "init"
version = "3.0.0"
edition = "2021"
authors = ["TanOS Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "init"
path = "src/main.rs"

[features]
# Build the userspace virtual-console driver demo instead of the default
# fault-isolation/reincarnation demo. See src/main.rs.
console_demo = []

[dependencies]
libmicro = { path = "../libmicro" }
kernel_types = { path = "../../core/types" }
