[package]
name = "keyboard_driver"
version = "3.0.0"
edition = "2021"
authors = ["TanOS Team"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "keyboard_driver"
path = "src/main.rs"

[dependencies]
libmicro = { path = "../../libmicro" }
kernel_types = { path = "../../../core/types" }
pc-keyboard = { workspace = true }
